src/objects/PMD_Product__c.object
<CustomObject>
    <description>Product definition repository (PMD)</description>
    <fields>
        <fullName>AFX_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the product variant will be sold through MotoMaker and requires AFX IMEI serial number blocks.</inlineHelpText>
        <label>MotoMaker (AFX) Personalization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMPS_Bands__c</fullName>
        <label>AMPS_Bands</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Noise Cancellation</description>
        <inlineHelpText>Active Noise Cancellation</inlineHelpText>
        <label>ANC Mic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APC_Description__c</fullName>
        <description>Accounting Project Code Description assigned by Finance department</description>
        <inlineHelpText>Accounting Project Code Description assigned by Finance department</inlineHelpText>
        <label>APC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APC__c</fullName>
        <inlineHelpText>Accounting Project Code assigned by Finance department</inlineHelpText>
        <label>APC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUDIO_VIDEO__c</fullName>
        <description>Layout Heading - not a real field</description>
        <label>* AUDIO &amp; VIDEO: *</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Product_Based_Data__c</fullName>
        <label>Account Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activation_Guide__c</fullName>
        <description>New field added on 23SEP13 to support PRD automation</description>
        <label>Activation Guide</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Accent_Components__c</fullName>
        <description>New field added on 23SEP13 to support PRD automation</description>
        <label>Additional Accent Components</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Dimensions_Locations__c</fullName>
        <description>New field added on 23SEP13 to support PRD automation</description>
        <label>Additional Dimensions/Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Android_Wear_Code_Name__c</fullName>
        <description>Moved to Product-level, from original Program-level, per Nick/Dan request 6/1/15</description>
        <inlineHelpText>Applies only to Android Wear devices; this is Google&apos;s internal code name for Wear devices</inlineHelpText>
        <label>Android Wear Code Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Antenna_Type__c</fullName>
        <description>Legacy</description>
        <label>Antenna_ Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retractable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stubby</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Processor__c</fullName>
        <label>Application Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Adjunct (generic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APQ8055</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APQ8064</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APQ8084</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM2727</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulverde 300 Mhz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB8500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Bulverde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Monihans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Penwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iWhistler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell PXA310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM7230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8236</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8255</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8260A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8636</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8655</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8660A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8909</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8916</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8929</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8936</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8960</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM8960 Pro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audio_Chipset__c</fullName>
        <label>Audio Chipset</label>
        <picklist>
            <picklistValues>
                <fullName>Atlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPCAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPCAP + PM8028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialog DA9034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell 88PM8607</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell BIX2C000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT6326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCAP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM6640</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM6650</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM6658</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM7540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM 8029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM8058</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM8110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM8921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM8952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMU8921 + WCD9310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualcomm 7540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadrunner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPF88143+RPF88144</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skyworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STE-AB8500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STE CPCAP V3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI C55 DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI CPCAP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audio_Codecs_Encode__c</fullName>
        <label>Audio Codecs Encode</label>
        <picklist>
            <picklistValues>
                <fullName>AAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC+ Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC LC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC SSR (MPEG4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMR NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMR WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QCELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA v10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA v9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA v10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA v9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Audio_Connections__c</fullName>
        <label>Audio Connections</label>
        <picklist>
            <picklistValues>
                <fullName>2.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro USB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini USB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Audio_Video_Content_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audio &amp; Video Content Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audo_Codecs_Decode__c</fullName>
        <label>Audio Codecs Decode</label>
        <picklist>
            <picklistValues>
                <fullName>AAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAC+ Enhanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMR NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMR WB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ogg Vorbis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QCELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA v10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA v9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA v10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA v8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMA v9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Baseband_Processor_1__c</fullName>
        <label>Baseband Processor 1</label>
        <picklist>
            <picklistValues>
                <fullName>AERO 4223</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AERO 4260</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APQ 8060A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APQ 8084AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon LV-LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2 JAZZ2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESC 6240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hancock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infineon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Medfield Penwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel XGOLD626</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iWhistler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell PXA920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell PXA920H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6600 + Beceem 350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6600+LCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM8220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM9200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM9225M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM9600</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseband_Processor_2__c</fullName>
        <label>Baseband Processor 2</label>
        <picklist>
            <picklistValues>
                <fullName>APQ 8084AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argon LV-LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2 JAZZ2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infineon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Medfield Penwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iWhistler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell PXA920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM6600+LCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM9625</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6245</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6246</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6281</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM6550</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseband_Processor_Clockspeed_GHz__c</fullName>
        <label>Baseband Processor Clockspeed (GHz)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_AH__c</fullName>
        <description>battery description</description>
        <label>Battery mAH</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Platform_Series_Extended__c</fullName>
        <label>Battery Platform Series Extended</label>
        <picklist>
            <picklistValues>
                <fullName>BC50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF5X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF6X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF7X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH5X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH6X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN70</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Battery_Platform_Series__c</fullName>
        <label>Battery</label>
        <picklist>
            <picklistValues>
                <fullName>BC50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF5X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF6X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF7X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH5X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN71</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Battery_Satisfaction_Prediction_BSP__c</fullName>
        <label>Battery Satisfaction Prediction Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Battery_Supplier__c</fullName>
        <label>Battery Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lishen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sony</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Battery_Technology__c</fullName>
        <label>Battery Technology</label>
        <picklist>
            <picklistValues>
                <fullName>High Si, Wide voltage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithium ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithium Polymer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nickel Cadmium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nickel Metal Hydride</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Battery_Type__c</fullName>
        <label>Battery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bluetooth_Chip_Model__c</fullName>
        <label>Bluetooth Chip Model</label>
        <picklist>
            <picklistValues>
                <fullName>BC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC3-MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC5 ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM2035B0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM2035B3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM2045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM2075</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM4329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCM4356</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM2046</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 2070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 20740</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 20748</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 20780</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 4325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCOM 4326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcomm 4330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR8670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvell 8787</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTK6616</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>